Added Oracle Universal Connection Pool to the test. Updated all libraries to the latest version, including JMH and the connection pools. Updated the tests to run with Java 11. fixed various warnings and deleted commented out code.